locally working parallal tests